# QuantOps

./: .env.example  .gitignore  README.md  Sprint6H-8.3.1_Completion_Report.md  Sprint6H-9.1_Alert_Consistency_Fix_Report.md  Sprint6H-9.2.3_Risk_Halt_Propagation_Fix_Report.md  Sprint6H-9.2.4_API_Debug_Hardening_Report.md  Sprint6H-9.2.6.1_Equity_Breakdown_Bugfix_Report.md  Sprint6H-9.2.6_Equity_Breakdown_Unification_Report.md  Sprint6H-9.2.7.1_QtySign_Truth_Correction_Report.md  Sprint6H-9.2.7_SignedQty_Equity_Truth_Fix_Report.md  Sprint6H-9_Completion_Report.md  Sprint6_E2E_Check.ps1  docker-compose.command_center.yml  docker-compose.yml  run_all.cmd  run_all_prod.cmd  run_all_prod_fast.cmd  safe_for_clean.md  start_frontend.cmd  start_frontend_prod.cmd  start_frontend_prod_fast.cmd  start_quantops_api.cmd  start_v12_api.cmd  stop_all.cmd  stop_all_prod.cmd  stop_frontend.cmd  stop_quantops_api.cmd  stop_v12_api.cmd  truthAPIResponse.md
apps/quantops-api/: .dockerignore  .env.example  Dockerfile  Dockerfile.command_center  docker-compose.yml  pyproject.toml  requirements.txt
apps/quantops-api/app/: dependencies.py  main.py  main_patch_example.py  worker.py
apps/quantops-api/app/api/: router.py
apps/quantops-api/app/clients/: v12_client.py
apps/quantops-api/app/contracts/: __init__.py  reason_codes.py  runtime_events.py
apps/quantops-api/app/core/: config.py  deps.py  jsonl_logger.py  request_context.py  trading_state.py
apps/quantops-api/app/db/: init_db.py  migrate.py
apps/quantops-api/app/schemas/: admin.py  (+10 more)
apps/quantops-api/scripts/: run_all_checks.sh
(+1428 files in other folders)
